<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/purple_background">

    <!-- Login Title -->
...
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="45sp"/>

    <!-- Email Address Field -->
    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"
        android:autofillHints="email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
...
        android:textColor="@color/grey"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="18sp"/>

    <!-- Password Field -->
    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLogin"
        android:autofillHints="password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
...
        android:textColor="@color/grey"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="18sp"/>

    <!-- Login Button  -->
    <ImageButton
        android:id="@+id/loginButton"
        android:layout_width="346dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="400dp"
        android:background="@null"
...
