<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_milestones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background">

    <fragment
        android:id="@+id/side_menu_fragment"
...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/milestones_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/milestones_title"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
...
